@@ -307,8 +307,8 @@ public class Modules extends System<Modules> {
     public void addAll(String packageName) {
         for (Class<?> klass : ClassFinder.findSubTypesOf(packageName, Module.class)) {
             try {
-                add((Module) klass.newInstance());
-            } catch (InstantiationException | IllegalAccessException e) {
+                add((Module) klass.getDeclaredConstructor().newInstance());
+            } catch (InstantiationException | InvocationTargetException | NoSuchMethodException | IllegalAccessException e) {
                 e.printStackTrace();
             }
         }
